--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <main>
         <div> <!-- hero -->
             <div>
-            <h1> My name is Jo-Shan! <span>I'm a UX designer certified by CareerFoundry.</span> </h1>
+            <h1> This is Jo-Shan! <span>I'm a UX designer certified by CareerFoundry.</span> </h1>
               <p>
                 I’m experienced in Customer Success and Digital Marketing, and maximising customer experience is my passion.
               </p>
