--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <ul>
             <li><a href="index.html"> Work </a></li>
             <li><a href="about.html"> About </a></li>
-            <li><a href="#contact"> Contact </a></li>
+            <li><a href="Contact Jo-Shan"> Contact </a></li>
           </ul>
         </nav>
       </div>
