--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
           <ul>
             <li><a href="index.html"> Work </a></li>
             <li><a href="about.html"> About </a></li>
-            <li><a href="#contact"> Contact </a></li>
+            <li><a href="#contact"> Contact Jo-Shan</a></li>
           </ul>
         </nav>
       </div>
@@ -75,7 +75,7 @@
                </div><!-- end of column 2-->
 
             </div> <!-- end of row -->
-          </div> 
+          </div>
           </div><!--end-->
       </main>
 
