--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <ul>
             <li><a href="index.html"> Work </a></li>
             <li><a href="about.html"> About </a></li>
-            <li><a href="Contact Jo-Shan"> Contact </a></li>
+            <li><a href="#contact"> Contact Jo-Shan </a></li>
           </ul>
         </nav>
       </div>
@@ -48,7 +48,7 @@
               <div> <!-- second column -->
                 <h3>Find an expert on CoachMe</h3>
                 <p>
-                  <a href="#">CoachMe</a> is a platform that helps job seekers get career advice from experts from all around the world
+                  <a href="coachme.html">CoachMe Expert</a> is a platform that helps job seekers get career advice from experts from all around the world
                 </p>
               </div>
             </div> <!-- end of first row -->
