--- a/index.html
+++ b/index.html
@@ -1,102 +1,116 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <link href="img/favicon.jpg" rel="shortcut icon">
-      <meta charset="utf-8">
-      <title>Jo-Shan Lee - UX Designer - Barcelona</title>
-  </head>
 
-  <body>
+<head>
+  <link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
+  <link href="img/favicon.jpg" rel="shortcut icon">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <title>Jo-Shan Lee - UX Designer - Barcelona</title>
+</head>
 
-    <header>
+<body>
+
+  <header>
+    <div>
+      <img src="img/logo.jpg" alt="Jo-Shan">
+      <nav>
+        <ul>
+          <li><a href="index.html" id="mywork"> Work </a></li>
+          <li><a href="about.html" id="aboutme"> About </a></li>
+          <li><a href="#contact" id="mycontact"> Contact Jo-Shan </a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <main>
+    <div>
+      <!-- hero -->
       <div>
-        <img src="img/logo.jpg" alt="Jo-Shan">
-        <nav>
-          <ul>
-            <li><a href="index.html"> Work </a></li>
-            <li><a href="about.html"> About </a></li>
-            <li><a href="#contact"> Contact Jo-Shan </a></li>
-          </ul>
-        </nav>
+        <h1> This is Jo-Shan! <span>I'm a UX designer certified by CareerFoundry.</span> </h1>
+        <p>
+          I’m experienced in Customer Success and Digital Marketing, and maximising customer experience is my passion.
+        </p>
+        <p>
+          I look forward to joining the Product world and designing optimal User Experience for a positive user journey.
+        </p>
       </div>
-    </header>
+    </div> <!-- end of hero -->
 
-      <main>
-        <div> <!-- hero -->
-            <div>
-            <h1> This is Jo-Shan! <span>I'm a UX designer certified by CareerFoundry.</span> </h1>
-              <p>
-                I’m experienced in Customer Success and Digital Marketing, and maximising customer experience is my passion.
-              </p>
-              <p>
-                I look forward to joining the Product world and designing optimal User Experience for a positive user journey.
-              </p>
-            </div>
-        </div> <!-- end of hero -->
-
-        <div> <!--work -->
-          <div>
-            <h2>My Work</h2>
-
-            <div> <!-- first row -->
-              <div> <!-- first column -->
-                <picture>
-                  <source srcset="img/expert/welcome_page.jpg" media="(max-width:767px)">
-                  <img src="img/expert/expertpage.jpg" alt="CoachMe Expert Page">
-                </picture>
-              </div>
-              <div> <!-- second column -->
-                <h3>Find an expert on CoachMe</h3>
-                <p>
-                  <a href="coachme.html">CoachMe Expert</a> is a platform that helps job seekers get career advice from experts from all around the world
-                </p>
-              </div>
-            </div> <!-- end of first row -->
-
-            <div> <!-- second row -->
-              <div> <!-- first column -->
-                <picture>
-                  <source srcset="img/expert/forumlist.jpg" media="(max-width:767px)">
-                  <img src="img/expert/discussion.jpg" alt="CoachMe Forum">
-                </picture>
-              </div>
-              <div> <!-- second column -->
-                <h3>Forum on CoachMe</h3>
-                <p>
-                  <a href="#">Forum</a> on CoachMe allows users and experts to share their thoughts and advice on different topics
-                </p>
-              </div>
-            </div> <!-- end of second row -->
-          </div>
-        </div><!-- end of work -->
-      </main>
-
-    <footer>
+    <div>
+      <!--work -->
       <div>
-        <h2>Contact Me!</h2>
-          <p>
-            Please get in touch if you think we can collaborate or to discuss opportunities!
-          </p>
-          <p>
-            Call me at <a href="tel:+34615335909"><img src="https://imgplaceholder.com/20x20/cccccc/757575/glyphicon-phone-alt" alt="ImgPlaceholder">+34-615-335-909</a>
-          </p>
-            <div>
-              <a href="mailto:jo_shan@hotmail.com?">Email me</a>
-            </div>
+        <h2>My Work</h2>
 
-            <div><!-- social media -->
-              <img src="img/facebook.svg" alt="Facebook">
-              <img src="img/linkedin.svg" alt="Linkedin">
-            </div>
-
+        <div>
+          <!-- first row -->
           <div>
+            <!-- first column -->
+            <picture>
+              <source srcset="img/expert/welcome_page.jpg" media="(max-width:767px)">
+              <img src="img/expert/expertpage.jpg" alt="CoachMe Expert Page">
+            </picture>
+          </div>
+          <div>
+            <!-- second column -->
+            <h3>Find an expert on CoachMe</h3>
             <p>
-              &copy; Copyright 2019 coachme.com
+              <a href="coachme.html">CoachMe Expert</a> is a platform that helps job seekers get career advice from experts from all around the world
             </p>
           </div>
-      </div>
-    </footer>
+        </div> <!-- end of first row -->
 
-  </body>
+        <div>
+          <!-- second row -->
+          <div>
+            <!-- first column -->
+            <picture>
+              <source srcset="img/expert/forumlist.jpg" media="(max-width:767px)">
+              <img src="img/expert/discussion.jpg" alt="CoachMe Forum">
+            </picture>
+          </div>
+          <div>
+            <!-- second column -->
+            <h3>Forum on CoachMe</h3>
+            <p>
+              <a href="#">Forum</a> on CoachMe allows users and experts to share their thoughts and advice on different topics
+            </p>
+          </div>
+        </div> <!-- end of second row -->
+      </div>
+    </div><!-- end of work -->
+  </main>
+
+  <footer>
+    <div>
+      <h2>Contact Me!</h2>
+      <p>
+        Please get in touch if you think we can collaborate or to discuss opportunities!
+      </p>
+      <p>
+        Call me at <a href="tel:+34615335909">+34-615-335-909</a>
+      </p>
+      <div>
+        <a href="mailto:jo_shan@hotmail.com?" class="button contact">Email me</a>
+      </div>
+
+      <div>
+        <!-- social media -->
+        <img src="img/facebook.svg" alt="Facebook">
+        <img src="img/linkedin.svg" alt="Linkedin">
+      </div>
+
+      <div>
+        <p>
+          &copy; Copyright 2019 coachme.com
+        </p>
+      </div>
+    </div>
+  </footer>
+
+</body>
 
 </html>
