--- a/coachme.html
+++ b/coachme.html
@@ -1,130 +1,165 @@
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-      <link href="img/favicon.jpg" rel="shortcut icon">
-      <meta charset="utf-8">
-      <title>About Jo-Shan</title>
-  </head>
 
-  <body>
+<head>
+  <link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
+  <link href="img/favicon.jpg" rel="shortcut icon">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <title>About Jo-Shan</title>
+</head>
 
-    <header>
+<body>
+
+  <header>
+    <div>
+      <img src="img/logo.jpg" alt="Jo-Shan">
+      <nav>
+        <ul>
+          <li><a href="index.html" id="mywork"> Work </a></li>
+          <li><a href="about.html" id="aboutme"> About </a></li>
+          <li><a href="#contact" id="mycontact"> Contact Jo-Shan </a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <main>
+    <div>
+      <!--main open-->
       <div>
-        <img src="img/logo.jpg" alt="Jo-Shan">
-        <nav>
-          <ul>
-            <li><a href="index.html"> Work </a></li>
-            <li><a href="about.html"> About </a></li>
-            <li><a href="#contact"> Contact Jo-Shan </a></li>
-          </ul>
-        </nav>
+        <!--open1-->
+        <h1>CoachMe - Expert Page</h1>
       </div>
-    </header>
-
-    <main>
-      <div> <!--main open-->
-          <div> <!--open1-->
-            <h1>CoachMe - Expert Page</h1>
-          </div> <!--close1-->
-            <picture>
-              <source srcset="img/expert/home.jpg" media="(max-width:767px)">
-              <img src="img/expert/homepage.jpg" alt="CoachMe Home">
-            </picture>
-          <div> <!--open1.1-->
-            <p>
-              The purpose of the expert page is for users to search for experts from around the world.
-              The ideation of having a list of available expert is to allow users to look at all available experts in the app.
-            </p>
-          </div> <!--close1.1-->
-
-        <div> <!--open2-->
-          <div> <!--open2.1-->
-            <h2>My Process</h2>
-          </div> <!--close2.1-->
-
-          <div> <!--open2.2-->
-            <h3>User Flow - Expert page</h3>
-             <picture>
-               <source srcset="img/expert/userflow.jpg" media="(max-width:767px)">
-               <img src="img/expert/userflow.jpg" alt="User flow">
-             </picture>
-            <div> <!--open2.2a-->
-              <p>
-                I’ve performed user interviews with a few candidates from different fields who have experienced career change or currently looking for career advancement/ career change.
-                After user research and interviews, I’ve created this user flow for one of our user personas - Dawna.
-              </p>
-            </div>  <!--close2.2a-->
-          </div> <!--close2.2-->
-        </div> <!--close2-->
-
-        <div> <!--open3 row-->
-          <h3> Ideation & Wireframe </h3>
-          <div> <!--open column1-->
-            <picture>
-              <source srcset="img/expert/ideation.jpg" media="(max-width:767px)">
-              <img src="img/expert/ideation1.jpg" alt="Wireframes">
-            </picture>
-          </div> <!--close column1-->
-
-          <div> <!--open column2-->
-            <p>
-              I’ve created a sketch of the design, followed by the low and mid-fidelity wireframe.
-              Usability testing was performed when the high fidelity version of the design was created.
-            </p>
-          </div> <!--close column2-->
-        </div> <!--close3 row-->
-
-        <div> <!--open4 row-->
-          <h3> Final Design </h3>
-          <div> <!--open column1-->
-            <picture>
-              <source srcset="img/expert/expnew.jpg" media="(max-width:767px)">
-              <img src="img/expert/expertpage.jpg" alt="Expert page">
-            </picture>
-          </div> <!--close column1-->
-
-          <div> <!--open column2-->
-            <p>
-              The wireframe was polished based on feedback from usability testing and accessibility testing.
-            </p>
-          </div> <!--close column2-->
-        </div> <!--close4 row-->
-
-        <div> <!--open5-->
-          <h3> Prototype </h3>
-          <p>
-            Checkout my prototype <a href="https://invis.io/2MRHMJCFB56#/347019005_High-Fid_V2-_Web_HomeNew1">here</a>
-          </p>
-        </div> <!--close5-->
-
-      </div> <!--main close-->
-    </main>
-
-    <footer>
+      <!--close1-->
+      <picture>
+        <source srcset="img/expert/home.jpg" media="(max-width:767px)">
+        <img src="img/expert/homepage.jpg" alt="CoachMe Home">
+      </picture>
       <div>
-        <h2>Contact Me!</h2>
-          <p>
-            Please get in touch if you think we can collaborate or to discuss opportunities!
-          </p>
-          <p>
-            Call me at <a href="tel:+34615335909"><img src="https://imgplaceholder.com/20x20/cccccc/757575/glyphicon-phone-alt" alt="ImgPlaceholder">+34-615-335-909</a>
-          </p>
-            <div>
-              <a href="mailto:jo_shan@hotmail.com?">Email me</a>
-            </div>
+        <!--open1.1-->
+        <p>
+          The purpose of the expert page is for users to search for experts from around the world.
+          The ideation of having a list of available expert is to allow users to look at all available experts in the app.
+        </p>
+      </div>
+      <!--close1.1-->
 
-            <div><!-- social media -->
-              <img src="img/facebook.svg" alt="Facebook">
-              <img src="img/linkedin.svg" alt="Linkedin">
-            </div>
+      <div>
+        <!--open2-->
+        <div>
+          <!--open2.1-->
+          <h2>My Process</h2>
+        </div>
+        <!--close2.1-->
 
+        <div>
+          <!--open2.2-->
+          <h3>User Flow - Expert page</h3>
+          <picture>
+            <source srcset="img/expert/userflow.jpg" media="(max-width:767px)">
+            <img src="img/expert/userflow.jpg" alt="User flow">
+          </picture>
           <div>
+            <!--open2.2a-->
             <p>
-              &copy; Copyright 2019 coachme.com
+              I’ve performed user interviews with a few candidates from different fields who have experienced career change or currently looking for career advancement/ career change.
+              After user research and interviews, I’ve created this user flow for one of our user personas - Dawna.
             </p>
           </div>
+          <!--close2.2a-->
+        </div>
+        <!--close2.2-->
       </div>
-    </footer>
+      <!--close2-->
 
-  </body>
+      <div>
+        <!--open3 row-->
+        <h3> Ideation & Wireframe </h3>
+        <div>
+          <!--open column1-->
+          <picture>
+            <source srcset="img/expert/ideation.jpg" media="(max-width:767px)">
+            <img src="img/expert/ideation1.jpg" alt="Wireframes">
+          </picture>
+        </div>
+        <!--close column1-->
+
+        <div>
+          <!--open column2-->
+          <p>
+            I’ve created a sketch of the design, followed by the low and mid-fidelity wireframe.
+            Usability testing was performed when the high fidelity version of the design was created.
+          </p>
+        </div>
+        <!--close column2-->
+      </div>
+      <!--close3 row-->
+
+      <div>
+        <!--open4 row-->
+        <h3> Final Design </h3>
+        <div>
+          <!--open column1-->
+          <picture>
+            <source srcset="img/expert/expnew.jpg" media="(max-width:767px)">
+            <img src="img/expert/expertpage.jpg" alt="Expert page">
+          </picture>
+        </div>
+        <!--close column1-->
+
+        <div>
+          <!--open column2-->
+          <p>
+            The wireframe was polished based on feedback from usability testing and accessibility testing.
+          </p>
+        </div>
+        <!--close column2-->
+      </div>
+      <!--close4 row-->
+
+      <div>
+        <!--open5-->
+        <h3> Prototype </h3>
+        <p>
+          Checkout my prototype <a href="https://invis.io/2MRHMJCFB56#/347019005_High-Fid_V2-_Web_HomeNew1">here</a>
+        </p>
+      </div>
+      <!--close5-->
+
+    </div>
+    <!--main close-->
+  </main>
+
+  <footer>
+    <div>
+      <h2>Contact Me!</h2>
+      <p>
+        Please get in touch if you think we can collaborate or to discuss opportunities!
+      </p>
+      <p>
+        Call me at <a href="tel:+34615335909">+34-615-335-909</a>
+      </p>
+      <div>
+        <a href="mailto:jo_shan@hotmail.com?" class="button contact">Email me</a>
+      </div>
+
+      <div>
+        <!-- social media -->
+        <img src="img/facebook.svg" alt="Facebook">
+        <img src="img/linkedin.svg" alt="Linkedin">
+      </div>
+
+      <div>
+        <p>
+          &copy; Copyright 2019 coachme.com
+        </p>
+      </div>
+    </div>
+  </footer>
+
+</body>
 
 </html>
