--- a/about.html
+++ b/about.html
@@ -1,110 +1,127 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-      <link href="img/favicon.jpg" rel="shortcut icon">
-      <meta charset="utf-8">
-      <title>About Jo-Shan</title>
-  </head>
 
-  <body>
+<head>
+  <link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
+  <link href="img/favicon.jpg" rel="shortcut icon">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <title>About Jo-Shan</title>
+</head>
 
-    <header>
+<body>
+
+  <header>
+    <div>
+      <img src="img/logo.jpg" alt="Jo-Shan">
+      <nav>
+        <ul>
+          <li><a href="index.html" id="mywork"> Work </a></li>
+          <li><a href="about.html" id="aboutme"> About </a></li>
+          <li><a href="#contact" id="mycontact"> Contact Jo-Shan </a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <main>
+    <div>
+      <!--open-->
       <div>
-        <img src="img/logo.jpg" alt="Jo-Shan">
-        <nav>
-          <ul>
-            <li><a href="index.html"> Work </a></li>
-            <li><a href="about.html"> About </a></li>
-            <li><a href="#contact"> Contact Jo-Shan</a></li>
-          </ul>
-        </nav>
+        <!--open1-->
+        <h1> About Jo-Shan - the UX designer </h1>
       </div>
-    </header>
+      <!--end1-->
+    </div>
+    <!--end-->
 
-      <main>
-        <div> <!--open-->
-          <div> <!--open1-->
-            <h1> About Jo-Shan - the UX designer </h1>
-          </div> <!--end1-->
-        </div> <!--end-->
-
-        <div> <!--open-->
-          <div>
-           <picture>
-             <source srcset="img/jsprofile.jpg" media="(max-width:767px)">
-             <img src="img/jsprofile1.jpg" alt="Jo-Shan">
-           </picture>
-
-            <div>  <!-- row -->
-              <div> <!--column 1-->
-                <h2>My Story</h2>
-                <p>
-                  I’m Jo-Shan, a UX designer graduated from CareerFoundry.
-                  I’m experienced in Customer Success and Digital Marketing, and maximising customer experience is my passion.
-                  I look forward to joining the Product world and designing optimal User Experience for a positive user journey.
-                 </p>
-                <p>
-                  Having worked in different Saas companies, I understand the customer journey of both Native apps and Web app.
-                  I am also familiar with different customer behaviours that help me understand customers needs and wants in Saas environment.
-                </p>
-                <a href="files/CV_Jo-ShanLee.pdf" download>View my full CV</a>
-              </div>  <!--end of column 1-->
-
-              <div> <!-- column 2-->
-                <h2>Skills and Tools</h2>
-                 <div> <!-- row 2-->
-                   <div>
-                    <h3>Skills</h3>
-                       <ul>
-                         <li>UX Design</li>
-                         <li>User Research</li>
-                         <li>Analytics</li>
-                         <li>UML</li>
-                       </ul>
-                   </div>
-
-                   <div>
-                    <h3>Tools</h3>
-                       <ul>
-                         <li>Sketch, Lucidchart, draw.io</li>
-                         <li>Mixpanel, Mailchimp, Sengrid</li>
-                         <li>PowerPoint/ Slides, Excel, Word</li>
-                       </ul>
-                   </div>
-                </div> <!-- end of row 2-->
-               </div><!-- end of column 2-->
-
-            </div> <!-- end of row -->
-          </div>
-          </div><!--end-->
-      </main>
-
-    <footer>
+    <div>
+      <!--open-->
       <div>
-        <h2>Contact Me!</h2>
-          <p>
-            Please get in touch if you think we can collaborate or to discuss opportunities!
-          </p>
-          <p>
-            Call me at <a href="tel:+34615335909"><img src="https://imgplaceholder.com/20x20/cccccc/757575/glyphicon-phone-alt" alt="ImgPlaceholder">+34-615-335-909</a>
-          </p>
-            <div>
-              <a href="mailto:jo_shan@hotmail.com?">Email me</a>
-            </div>
+        <picture>
+          <source srcset="img/jsprofile.jpg" media="(max-width:767px)">
+          <img src="img/jsprofile1.jpg" alt="Jo-Shan">
+        </picture>
 
-            <div><!-- social media -->
-              <img src="img/facebook.svg" alt="Facebook">
-              <img src="img/linkedin.svg" alt="Linkedin">
-            </div>
-
+        <div>
+          <!-- row -->
           <div>
+            <!--column 1-->
+            <h2>My Story</h2>
             <p>
-              &copy; Copyright 2019 coachme.com
+              I’m Jo-Shan, a UX designer graduated from CareerFoundry.
+              I’m experienced in Customer Success and Digital Marketing, and maximising customer experience is my passion.
+              I look forward to joining the Product world and designing optimal User Experience for a positive user journey.
             </p>
+            <p>
+              Having worked in different Saas companies, I understand the customer journey of both Native apps and Web app.
+              I am also familiar with different customer behaviours that help me understand customers needs and wants in Saas environment.
+            </p>
+            <a href="files/CV_Jo-ShanLee.pdf" class="button">View my full CV</a>
           </div>
-      </div>
-    </footer>
+          <!--end of column 1-->
 
-  </body>
+          <div>
+            <!-- column 2-->
+            <h2>Skills and Tools</h2>
+            <div>
+              <!-- row 2-->
+              <div>
+                <h3>Skills</h3>
+                <ul>
+                  <li>UX Design</li>
+                  <li>User Research</li>
+                  <li>Analytics</li>
+                  <li>UML</li>
+                </ul>
+              </div>
+
+              <div>
+                <h3>Tools</h3>
+                <ul>
+                  <li>Sketch, Lucidchart, draw.io</li>
+                  <li>Mixpanel, Mailchimp, Sengrid</li>
+                  <li>PowerPoint/ Slides, Excel, Word</li>
+                </ul>
+              </div>
+            </div> <!-- end of row 2-->
+          </div><!-- end of column 2-->
+
+        </div> <!-- end of row -->
+      </div>
+    </div>
+    <!--end-->
+  </main>
+
+  <footer>
+    <div>
+      <h2>Contact Me!</h2>
+      <p>
+        Please get in touch if you think we can collaborate or to discuss opportunities!
+      </p>
+      <p>
+        Call me at <a href="tel:+34615335909">+34-615-335-909</a>
+      </p>
+      <div>
+        <a href="mailto:jo_shan@hotmail.com?" class="button contact">Email me</a>
+      </div>
+
+      <div>
+        <!-- social media -->
+        <img src="img/facebook.svg" alt="Facebook">
+        <img src="img/linkedin.svg" alt="Linkedin">
+      </div>
+
+      <div>
+        <p>
+          &copy; Copyright 2019 coachme.com
+        </p>
+      </div>
+    </div>
+  </footer>
+
+</body>
 
 </html>
