--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
   <link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700" rel="stylesheet">
   <link href="img/favicon.jpg" rel="shortcut icon">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
@@ -15,7 +15,7 @@
 
   <header>
     <div>
-      <img src="img/logo.jpg" alt="Jo-Shan">
+      <img src="img/logo.png" alt="Jo-Shan" class="logo">
       <nav>
         <ul>
           <li><a href="index.html" id="mywork"> Work </a></li>
@@ -37,7 +37,7 @@
     </div>
     <!--end-->
 
-    <div>
+    <div id="story">
       <!--open-->
       <div>
         <picture>
@@ -45,7 +45,7 @@
           <img src="img/jsprofile1.jpg" alt="Jo-Shan">
         </picture>
 
-        <div>
+        <div class="row">
           <!-- row -->
           <div>
             <!--column 1-->
@@ -66,7 +66,7 @@
           <div>
             <!-- column 2-->
             <h2>Skills and Tools</h2>
-            <div>
+            <div class="row">
               <!-- row 2-->
               <div>
                 <h3>Skills</h3>
@@ -96,7 +96,7 @@
   </main>
 
   <footer>
-    <div>
+    <div class="container">
       <h2>Contact Me!</h2>
       <p>
         Please get in touch if you think we can collaborate or to discuss opportunities!
@@ -115,7 +115,7 @@
       </div>
 
       <div>
-        <p>
+        <p class="center">
           &copy; Copyright 2019 coachme.com
         </p>
       </div>
