--- a/coachme.html
+++ b/coachme.html
@@ -4,7 +4,7 @@
 <head>
   <link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700" rel="stylesheet">
   <link href="img/favicon.jpg" rel="shortcut icon">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
@@ -15,7 +15,7 @@
 
   <header>
     <div>
-      <img src="img/logo.jpg" alt="Jo-Shan">
+      <img src="img/logo.png" alt="Jo-Shan" class="logo">
       <nav>
         <ul>
           <li><a href="index.html" id="mywork"> Work </a></li>
@@ -49,7 +49,7 @@
 
       <div>
         <!--open2-->
-        <div>
+        <div id="process">
           <!--open2.1-->
           <h2>My Process</h2>
         </div>
@@ -75,7 +75,7 @@
       </div>
       <!--close2-->
 
-      <div>
+      <div class="row">
         <!--open3 row-->
         <h3> Ideation & Wireframe </h3>
         <div>
@@ -98,14 +98,14 @@
       </div>
       <!--close3 row-->
 
-      <div>
+      <div class="row">
         <!--open4 row-->
         <h3> Final Design </h3>
         <div>
           <!--open column1-->
           <picture>
-            <source srcset="img/expert/expnew.jpg" media="(max-width:767px)">
-            <img src="img/expert/expertpage.jpg" alt="Expert page">
+            <source srcset="img/expert/expert.jpg" media="(max-width:767px)">
+            <img src="img/expert/expertlist.jpg" alt="Expert page">
           </picture>
         </div>
         <!--close column1-->
@@ -134,7 +134,7 @@
   </main>
 
   <footer>
-    <div>
+    <div class="container">
       <h2>Contact Me!</h2>
       <p>
         Please get in touch if you think we can collaborate or to discuss opportunities!
@@ -153,7 +153,7 @@
       </div>
 
       <div>
-        <p>
+        <p class="center">
           &copy; Copyright 2019 coachme.com
         </p>
       </div>
