css code amended, styling done for About and CoachMe

--- a/about.html
+++ b/about.html
@@ -14,22 +14,22 @@
 <body>
 
   <header>
-    <div>
+    <div class="container">
       <img src="img/logo.png" alt="Jo-Shan" class="logo">
       <nav>
         <ul>
-          <li><a href="index.html" id="mywork"> Work </a></li>
-          <li><a href="about.html" id="aboutme"> About </a></li>
-          <li><a href="#contact" id="mycontact"> Contact Jo-Shan </a></li>
+          <li><a href="index.html"> Work </a></li>
+          <li><a href="about.html"> About </a></li>
+          <li><a href="#contact"> Contact Jo-Shan </a></li>
         </ul>
       </nav>
     </div>
   </header>
 
   <main>
-    <div>
+    <div id="hero">
       <!--open-->
-      <div>
+      <div class="container">
         <!--open1-->
         <h1> About Jo-Shan - the UX designer </h1>
       </div>
@@ -39,10 +39,10 @@
 
     <div id="story">
       <!--open-->
-      <div>
+      <div class="container">
         <picture>
           <source srcset="img/jsprofile.jpg" media="(max-width:767px)">
-          <img src="img/jsprofile1.jpg" alt="Jo-Shan">
+          <img src="img/jsprofile1.jpg" alt="Jo-Shan" class="img">
         </picture>
 
         <div class="row">
@@ -95,7 +95,7 @@
     <!--end-->
   </main>
 
-  <footer>
+  <footer id="contact">
     <div class="container">
       <h2>Contact Me!</h2>
       <p>
@@ -110,8 +110,8 @@
 
       <div>
         <!-- social media -->
-        <img src="img/facebook.svg" alt="Facebook">
-        <img src="img/linkedin.svg" alt="Linkedin">
+        <img src="img/facebook.svg" alt="Facebook" class="social">
+        <img src="img/linkedin.svg" alt="Linkedin" class="social">
       </div>
 
       <div>
