--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       <img src="img/logo.png" alt="Jo-Shan" class="logo">
       <nav>
         <ul>
-          <li><a href="index.html" id="mywork"> Work </a></li>
-          <li><a href="about.html" id="aboutme"> About </a></li>
-          <li><a href="#contact" id="mycontact"> Contact Jo-Shan </a></li>
+          <li><a href="index.html"> Work </a></li>
+          <li><a href="about.html"> About </a></li>
+          <li><a href="#contact"> Contact Jo-Shan </a></li>
         </ul>
       </nav>
     </div>
@@ -51,7 +51,7 @@
             <!-- first column -->
             <picture>
               <source srcset="img/expert/expert.jpg" media="(max-width:767px)">
-              <img src="img/expert/expertlist.jpg" alt="CoachMe Expert Page">
+              <img src="img/expert/expertlist.jpg" alt="CoachMe Expert Page" class="img">
             </picture>
           </div>
           <div>
@@ -70,7 +70,7 @@
             <!-- first column -->
             <picture>
               <source srcset="img/expert/forum1.jpg" media="(max-width:767px)">
-              <img src="img/expert/discussion.jpg" alt="CoachMe Forum">
+              <img src="img/expert/discussion.jpg" alt="CoachMe Forum" class="img">
             </picture>
           </div>
           <div>
@@ -85,7 +85,7 @@
     </div><!-- end of work -->
   </main>
 
-  <footer>
+  <footer id="contact">
     <div class="container">
       <h2>Contact Me!</h2>
       <p>
@@ -100,8 +100,8 @@
 
       <div>
         <!-- social media -->
-        <img src="img/facebook.svg" alt="Facebook">
-        <img src="img/linkedin.svg" alt="Linkedin">
+        <img src="img/facebook.svg" alt="Facebook" class="social">
+        <img src="img/linkedin.svg" alt="Linkedin" class="social">
       </div>
 
       <div>
