Css code edited

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
   <footer id="contact">
     <div class="container">
-      <h2>Contact Me!</h2>
+      <h2>Get in touch!</h2>
       <p>
         Please get in touch if you think we can collaborate or to discuss opportunities!
       </p>
