CSS Media query, animation added

--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
   <title>About Jo-Shan</title>
 </head>
 
-<body>
+<body id="about-page">
 
   <header>
     <div class="container">
@@ -59,7 +59,7 @@
               Having worked in different Saas companies, I understand the customer journey of both Native apps and Web app.
               I am also familiar with different customer behaviours that help me understand customers needs and wants in Saas environment.
             </p>
-            <a href="files/CV_Jo-ShanLee.pdf" class="button">View my full CV</a>
+            <a href="files/CV_Jo-ShanLee.pdf" class="button2">View my full CV</a>
           </div>
           <!--end of column 1-->
 
@@ -68,7 +68,7 @@
             <h2>Skills and Tools</h2>
             <div class="row">
               <!-- row 2-->
-              <div>
+              <div class="col-md-6 col-lg-8 col-xl-4">
                 <h3>Skills</h3>
                 <ul>
                   <li>UX Design</li>
@@ -78,7 +78,7 @@
                 </ul>
               </div>
 
-              <div>
+              <div class="col-md-6 col-lg-8 col-xl-4">
                 <h3>Tools</h3>
                 <ul>
                   <li>Sketch, Lucidchart, draw.io</li>
