--- a/coachme.html
+++ b/coachme.html
@@ -87,7 +87,8 @@
         <div class="row">
           <!--open3 row-->
           <h3> Ideation & Wireframe </h3>
-          <div>
+
+          <div class="col-md-6 col-lg-7 col-xl-4">
             <!--open column1-->
             <picture>
               <source srcset="img/expert/ideation.jpg" media="(max-width:767px)">
@@ -96,7 +97,7 @@
           </div>
           <!--close column1-->
 
-          <div>
+          <div class="col-md-6 col-lg-5 col-xl-4">
             <!--open column2-->
             <p>
               I’ve created a sketch of the design, followed by the low and mid-fidelity wireframe.
@@ -110,7 +111,8 @@
         <div class="row">
           <!--open4 row-->
           <h3> Final Design </h3>
-          <div>
+
+          <div class="col-md-6 col-lg-7 col-xl-4">
             <!--open column1-->
             <picture>
               <source srcset="img/expert/expert.jpg" media="(max-width:767px)">
@@ -119,7 +121,7 @@
           </div>
           <!--close column1-->
 
-          <div>
+          <div class="col-md-6 col-lg-5 col-xl-4">
             <!--open column2-->
             <p>
               The wireframe was polished based on feedback from usability testing and accessibility testing.
